base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: lab1
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 3002
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: lab1
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3001
  type: NodePort
